--- a/css/style.css
+++ b/css/style.css
@@ -9,23 +9,24 @@ body{
 font-size:70px;
 font-family:Arial, Helvetica Neue, Helvetica, sans-serif;
 color:grey;
+text-align:center;
 }
 .leftpanel{
     width:70%;
-    position:relative;
-    float:left;
 }
 .rightpanel{
+    position:absolute;
+    top:0px;
+    left:70%;
+    width: 25%;
+    height:99%;
+    overflow-y: auto;
     color:#b2aba6;
     font-family:Arial, Helvetica Neue, Helvetica, sans-serif;
-    width:25%;
-    height:100vh;
-    position:fixed;
-    margin-left:70%;
-    padding-left:5px;
     border-left-width: 5px;
     border-left-color: grey;
     border-left-style: solid;
+    padding-left:8px;
 }
 .article{
     display: table;
@@ -65,4 +66,14 @@ a:hover {
 /* selected link */
 a:active {
     color: #000000;
+}
+.footer{
+    position:static;
+    width:100vw;
+    text-align:center;
+}
+.wrapper{
+    display:table;
+    position:relative;
+    width:100%;
 }
